FlyMonitor临时修改提交

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,25 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
 }
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.2'
+    }
+
+}
+allprojects {
+    repositories {
+        google()
+        jcenter()
+
+    }
+}
+
+
+
+
+
