测试正式服务器

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
     }
+    repositories {
+        google()
+        jcenter()
+    }
 
 }
 allprojects {
